SERVER-15184 memset before constructor to avoid clang 3.5 warning