src/third_party/s2/s2regioncoverer.cc
@@ -112,15 +112,9 @@ S2RegionCoverer::Candidate* S2RegionCoverer::NewCandidate(S2Cell const& cell) {
   if (!is_terminal) {
     size += sizeof(Candidate*) << max_children_shift();
   }
-  Candidate* candidate = static_cast<Candidate*>(malloc(size));
-
-// Disable error on Clang 3.5
-// See SERVER-15184
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wdynamic-class-memaccess"
-  memset(candidate, 0, size);
-#pragma clang diagnostic pop
-
+  void* candidateStorage = malloc(size);
+  memset(candidateStorage, 0, size);
+  Candidate* candidate = new(candidateStorage) Candidate;
   candidate->cell = cell;
   candidate->is_terminal = is_terminal;
   ++candidates_created_counter_;
